testdata/baselines/reference/conformance/negatedTypes.errors.txt
negatedTypes.ts(20,5): error TS2322: Type 'string' is not assignable to type 'not string'.
negatedTypes.ts(21,5): error TS2322: Type 'string' is not assignable to type 'not string'.
negatedTypes.ts(22,5): error TS2322: Type 'Literal' is not assignable to type 'not string'.
negatedTypes.ts(26,5): error TS2322: Type 'unknown' is not assignable to type 'not string'.
negatedTypes.ts(29,5): error TS2322: Type 'not string' is not assignable to type 'string'.
  Type 'unknown' is not assignable to type 'string'.
negatedTypes.ts(30,5): error TS2322: Type 'not string' is not assignable to type '"ok"'.
  Type 'unknown' is not assignable to type '"ok"'.
negatedTypes.ts(31,5): error TS2322: Type 'not string' is not assignable to type 'Literal'.
  Type 'unknown' is not assignable to type 'Literal'.
negatedTypes.ts(32,5): error TS2322: Type 'not string' is not assignable to type 'number'.
  Type 'unknown' is not assignable to type 'number'.
negatedTypes.ts(33,5): error TS2322: Type 'not string' is not assignable to type '0'.
  Type 'unknown' is not assignable to type '0'.
negatedTypes.ts(34,5): error TS2322: Type 'not string' is not assignable to type 'NumLiteral'.
  Type 'unknown' is not assignable to type 'NumLiteral'.
negatedTypes.ts(36,5): error TS2322: Type 'not string' is not assignable to type 'never'.
  Type 'unknown' is not assignable to type 'never'.
negatedTypes.ts(49,5): error TS2741: Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; }'.
negatedTypes.ts(51,5): error TS2322: Type 'not { x: any; }' is not assignable to type '{ x: any; }'.
  Type 'unknown' is not assignable to type '{ x: any; }'.
negatedTypes.ts(52,5): error TS2322: Type 'not { y: any; }' is not assignable to type '{ x: any; }'.
  Type 'unknown' is not assignable to type '{ x: any; }'.
negatedTypes.ts(53,5): error TS2322: Type 'not { x: any; y: any; }' is not assignable to type '{ x: any; }'.
  Type 'unknown' is not assignable to type '{ x: any; }'.
negatedTypes.ts(54,5): error TS2322: Type 'not { x: any; } & not { y: any; }' is not assignable to type '{ x: any; }'.
negatedTypes.ts(55,5): error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type '{ x: any; }'.
  Type 'unknown' is not assignable to type '{ x: any; }'.
negatedTypes.ts(57,5): error TS2741: Property 'y' is missing in type '{ x: any; }' but required in type '{ y: any; }'.
negatedTypes.ts(59,5): error TS2322: Type 'not { x: any; }' is not assignable to type '{ y: any; }'.
  Type 'unknown' is not assignable to type '{ y: any; }'.
negatedTypes.ts(60,5): error TS2322: Type 'not { y: any; }' is not assignable to type '{ y: any; }'.
  Type 'unknown' is not assignable to type '{ y: any; }'.
negatedTypes.ts(61,5): error TS2322: Type 'not { x: any; y: any; }' is not assignable to type '{ y: any; }'.
  Type 'unknown' is not assignable to type '{ y: any; }'.
negatedTypes.ts(62,5): error TS2322: Type 'not { x: any; } & not { y: any; }' is not assignable to type '{ y: any; }'.
negatedTypes.ts(63,5): error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type '{ y: any; }'.
  Type 'unknown' is not assignable to type '{ y: any; }'.
negatedTypes.ts(65,5): error TS2741: Property 'y' is missing in type '{ x: any; }' but required in type '{ x: any; y: any; }'.
negatedTypes.ts(66,5): error TS2741: Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; y: any; }'.
negatedTypes.ts(67,5): error TS2322: Type 'not { x: any; }' is not assignable to type '{ x: any; y: any; }'.
  Type 'unknown' is not assignable to type '{ x: any; y: any; }'.
negatedTypes.ts(68,5): error TS2322: Type 'not { y: any; }' is not assignable to type '{ x: any; y: any; }'.
  Type 'unknown' is not assignable to type '{ x: any; y: any; }'.
negatedTypes.ts(69,5): error TS2322: Type 'not { x: any; y: any; }' is not assignable to type '{ x: any; y: any; }'.
  Type 'unknown' is not assignable to type '{ x: any; y: any; }'.
negatedTypes.ts(70,5): error TS2322: Type 'not { x: any; } & not { y: any; }' is not assignable to type '{ x: any; y: any; }'.
negatedTypes.ts(71,5): error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type '{ x: any; y: any; }'.
  Type 'unknown' is not assignable to type '{ x: any; y: any; }'.
negatedTypes.ts(73,5): error TS2322: Type '{ x: any; }' is not assignable to type 'not { x: any; }'.
negatedTypes.ts(74,5): error TS2322: Type '{ y: any; }' is not assignable to type 'not { x: any; }'.
negatedTypes.ts(75,5): error TS2322: Type 'not { y: any; }' is not assignable to type 'not { x: any; }'.
  Property 'y' is missing in type '{ x: any; }' but required in type '{ y: any; }'.
negatedTypes.ts(76,5): error TS2322: Type 'not { x: any; y: any; }' is not assignable to type 'not { x: any; }'.
  Property 'y' is missing in type '{ x: any; }' but required in type '{ x: any; y: any; }'.
negatedTypes.ts(78,5): error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type 'not { x: any; }'.
  Type '{ x: any; }' is not assignable to type '{ x: any; } & { y: any; }'.
    Property 'y' is missing in type '{ x: any; }' but required in type '{ y: any; }'.
negatedTypes.ts(80,5): error TS2322: Type '{ x: any; }' is not assignable to type 'not { y: any; }'.
negatedTypes.ts(81,5): error TS2322: Type '{ y: any; }' is not assignable to type 'not { y: any; }'.
negatedTypes.ts(82,5): error TS2322: Type 'not { x: any; }' is not assignable to type 'not { y: any; }'.
  Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; }'.
negatedTypes.ts(83,5): error TS2322: Type 'not { x: any; y: any; }' is not assignable to type 'not { y: any; }'.
  Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; y: any; }'.
negatedTypes.ts(85,5): error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type 'not { y: any; }'.
  Type '{ y: any; }' is not assignable to type '{ x: any; } & { y: any; }'.
    Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; }'.
negatedTypes.ts(87,5): error TS2322: Type '{ x: any; }' is not assignable to type 'not { x: any; y: any; }'.
negatedTypes.ts(88,5): error TS2322: Type '{ y: any; }' is not assignable to type 'not { x: any; y: any; }'.
negatedTypes.ts(89,5): error TS2322: Type '{ x: any; y: any; }' is not assignable to type 'not { x: any; y: any; }'.
negatedTypes.ts(95,5): error TS2322: Type '{ x: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
  Type '{ x: any; }' is not assignable to type 'not { x: any; }'.
negatedTypes.ts(96,5): error TS2322: Type '{ y: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
  Type '{ y: any; }' is not assignable to type 'not { x: any; }'.
negatedTypes.ts(97,5): error TS2322: Type '{ x: any; y: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
  Type '{ x: any; y: any; }' is not assignable to type 'not { x: any; }'.
negatedTypes.ts(98,5): error TS2322: Type 'not { x: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
  Type 'unknown' is not assignable to type 'not { x: any; } & not { y: any; }'.
    Type 'unknown' is not assignable to type 'not { x: any; }'.
      Type 'not { x: any; }' is not assignable to type 'not { y: any; }'.
        Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; }'.
negatedTypes.ts(99,5): error TS2322: Type 'not { y: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
  Type 'unknown' is not assignable to type 'not { x: any; } & not { y: any; }'.
    Type 'unknown' is not assignable to type 'not { x: any; }'.
      Type 'not { y: any; }' is not assignable to type 'not { x: any; }'.
        Property 'y' is missing in type '{ x: any; }' but required in type '{ y: any; }'.
negatedTypes.ts(100,5): error TS2322: Type 'not { x: any; y: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
  Type 'unknown' is not assignable to type 'not { x: any; } & not { y: any; }'.
    Type 'unknown' is not assignable to type 'not { x: any; }'.
      Type 'not { x: any; y: any; }' is not assignable to type 'not { x: any; }'.
        Property 'y' is missing in type '{ x: any; }' but required in type '{ x: any; y: any; }'.
negatedTypes.ts(101,5): error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type 'not { x: any; } & not { y: any; }'.
  Type 'unknown' is not assignable to type 'not { x: any; } & not { y: any; }'.
    Type 'unknown' is not assignable to type 'not { x: any; }'.
      Type 'not ({ x: any; } & { y: any; })' is not assignable to type 'not { x: any; }'.
        Type '{ x: any; }' is not assignable to type '{ x: any; } & { y: any; }'.
          Property 'y' is missing in type '{ x: any; }' but required in type '{ y: any; }'.
negatedTypes.ts(103,5): error TS2322: Type '{ x: any; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.
negatedTypes.ts(104,5): error TS2322: Type '{ y: any; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.
negatedTypes.ts(105,5): error TS2322: Type '{ x: any; y: any; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.


==== negatedTypes.ts (53 errors) ====
    enum Literal {
        ok = "ok"
    }
    
    enum NumLiteral {
        Val
    }
    
    function f1(
        notString: not string,
        str: string,
        strlit: "ok",
        strenum: Literal,
        num: number,
        numlit: 0,
        numenum: NumLiteral,
        unknownVal: unknown,
        neverVal: never
    ) {
        notString = str; // not ok
        ~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'not string'.
        notString = strlit; // not ok
        ~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'not string'.
        notString = strenum; // not ok
        ~~~~~~~~~
!!! error TS2322: Type 'Literal' is not assignable to type 'not string'.
        notString = num; // ok
        notString = numlit; // ok
        notString = numenum; // ok
        notString = unknownVal; // not ok (unknown is all values, includes string)
        ~~~~~~~~~
!!! error TS2322: Type 'unknown' is not assignable to type 'not string'.
        notString = neverVal; // ok (never is empty set of types, doesn't include string)
    
        str = notString; // not ok
        ~~~
!!! error TS2322: Type 'not string' is not assignable to type 'string'.
!!! error TS2322:   Type 'unknown' is not assignable to type 'string'.
        strlit = notString; // not ok
        ~~~~~~
!!! error TS2322: Type 'not string' is not assignable to type '"ok"'.
!!! error TS2322:   Type 'unknown' is not assignable to type '"ok"'.
        strenum = notString; // not ok
        ~~~~~~~
!!! error TS2322: Type 'not string' is not assignable to type 'Literal'.
!!! error TS2322:   Type 'unknown' is not assignable to type 'Literal'.
        num = notString; // not ok
        ~~~
!!! error TS2322: Type 'not string' is not assignable to type 'number'.
!!! error TS2322:   Type 'unknown' is not assignable to type 'number'.
        numlit = notString; // not ok
        ~~~~~~
!!! error TS2322: Type 'not string' is not assignable to type '0'.
!!! error TS2322:   Type 'unknown' is not assignable to type '0'.
        numenum = notString; // not ok
        ~~~~~~~
!!! error TS2322: Type 'not string' is not assignable to type 'NumLiteral'.
!!! error TS2322:   Type 'unknown' is not assignable to type 'NumLiteral'.
        unknownVal = notString; // ok
        neverVal = notString; // not ok
        ~~~~~~~~
!!! error TS2322: Type 'not string' is not assignable to type 'never'.
!!! error TS2322:   Type 'unknown' is not assignable to type 'never'.
    }
    
    function f2(
        x: { x: any },
        y: { y: any },
        xy: { x: any, y: any },
        nx: not typeof x,
        ny: not typeof y,
        nxy: not typeof xy,
        neither: not (typeof x | typeof y),
        notBoth: not (typeof x & typeof y)
    ) {
        x = y; // not ok
        ~
!!! error TS2741: Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; }'.
!!! related TS2728 negatedTypes.ts:40:10: 'x' is declared here.
        x = xy; // ok
        x = nx; // not ok
        ~
!!! error TS2322: Type 'not { x: any; }' is not assignable to type '{ x: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ x: any; }'.
        x = ny; // not ok
        ~
!!! error TS2322: Type 'not { y: any; }' is not assignable to type '{ x: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ x: any; }'.
        x = nxy; // not ok
        ~
!!! error TS2322: Type 'not { x: any; y: any; }' is not assignable to type '{ x: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ x: any; }'.
        x = neither; // not ok
        ~
!!! error TS2322: Type 'not { x: any; } & not { y: any; }' is not assignable to type '{ x: any; }'.
        x = notBoth; // not ok
        ~
!!! error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type '{ x: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ x: any; }'.
    
        y = x; // not ok
        ~
!!! error TS2741: Property 'y' is missing in type '{ x: any; }' but required in type '{ y: any; }'.
!!! related TS2728 negatedTypes.ts:41:10: 'y' is declared here.
        y = xy; // ok
        y = nx; // not ok
        ~
!!! error TS2322: Type 'not { x: any; }' is not assignable to type '{ y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ y: any; }'.
        y = ny; // not ok
        ~
!!! error TS2322: Type 'not { y: any; }' is not assignable to type '{ y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ y: any; }'.
        y = nxy; // not ok
        ~
!!! error TS2322: Type 'not { x: any; y: any; }' is not assignable to type '{ y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ y: any; }'.
        y = neither; // not ok
        ~
!!! error TS2322: Type 'not { x: any; } & not { y: any; }' is not assignable to type '{ y: any; }'.
        y = notBoth; // not ok
        ~
!!! error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type '{ y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ y: any; }'.
    
        xy = x; // not ok
        ~~
!!! error TS2741: Property 'y' is missing in type '{ x: any; }' but required in type '{ x: any; y: any; }'.
!!! related TS2728 negatedTypes.ts:42:19: 'y' is declared here.
        xy = y; // not ok
        ~~
!!! error TS2741: Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; y: any; }'.
!!! related TS2728 negatedTypes.ts:42:11: 'x' is declared here.
        xy = nx; // not ok
        ~~
!!! error TS2322: Type 'not { x: any; }' is not assignable to type '{ x: any; y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ x: any; y: any; }'.
        xy = ny; // not ok
        ~~
!!! error TS2322: Type 'not { y: any; }' is not assignable to type '{ x: any; y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ x: any; y: any; }'.
        xy = nxy; // not ok
        ~~
!!! error TS2322: Type 'not { x: any; y: any; }' is not assignable to type '{ x: any; y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ x: any; y: any; }'.
        xy = neither; // not ok
        ~~
!!! error TS2322: Type 'not { x: any; } & not { y: any; }' is not assignable to type '{ x: any; y: any; }'.
        xy = notBoth; // not ok
        ~~
!!! error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type '{ x: any; y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type '{ x: any; y: any; }'.
    
        nx = x; // not ok
        ~~
!!! error TS2322: Type '{ x: any; }' is not assignable to type 'not { x: any; }'.
        nx = y; // not ok
        ~~
!!! error TS2322: Type '{ y: any; }' is not assignable to type 'not { x: any; }'.
        nx = ny; // not ok
        ~~
!!! error TS2322: Type 'not { y: any; }' is not assignable to type 'not { x: any; }'.
!!! error TS2322:   Property 'y' is missing in type '{ x: any; }' but required in type '{ y: any; }'.
!!! related TS2728 negatedTypes.ts:41:10: 'y' is declared here.
        nx = nxy; // not ok
        ~~
!!! error TS2322: Type 'not { x: any; y: any; }' is not assignable to type 'not { x: any; }'.
!!! error TS2322:   Property 'y' is missing in type '{ x: any; }' but required in type '{ x: any; y: any; }'.
!!! related TS2728 negatedTypes.ts:42:19: 'y' is declared here.
        nx = neither; // ok
        nx = notBoth; // not ok
        ~~
!!! error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type 'not { x: any; }'.
!!! error TS2322:   Type '{ x: any; }' is not assignable to type '{ x: any; } & { y: any; }'.
!!! error TS2322:     Property 'y' is missing in type '{ x: any; }' but required in type '{ y: any; }'.
!!! related TS2728 negatedTypes.ts:41:10: 'y' is declared here.
    
        ny = x; // not ok
        ~~
!!! error TS2322: Type '{ x: any; }' is not assignable to type 'not { y: any; }'.
        ny = y; // not ok
        ~~
!!! error TS2322: Type '{ y: any; }' is not assignable to type 'not { y: any; }'.
        ny = nx; // not ok
        ~~
!!! error TS2322: Type 'not { x: any; }' is not assignable to type 'not { y: any; }'.
!!! error TS2322:   Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; }'.
!!! related TS2728 negatedTypes.ts:40:10: 'x' is declared here.
        ny = nxy; // not ok
        ~~
!!! error TS2322: Type 'not { x: any; y: any; }' is not assignable to type 'not { y: any; }'.
!!! error TS2322:   Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; y: any; }'.
!!! related TS2728 negatedTypes.ts:42:11: 'x' is declared here.
        ny = neither; // ok
        ny = notBoth; // not ok
        ~~
!!! error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type 'not { y: any; }'.
!!! error TS2322:   Type '{ y: any; }' is not assignable to type '{ x: any; } & { y: any; }'.
!!! error TS2322:     Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; }'.
!!! related TS2728 negatedTypes.ts:40:10: 'x' is declared here.
    
        nxy = x; // not ok
        ~~~
!!! error TS2322: Type '{ x: any; }' is not assignable to type 'not { x: any; y: any; }'.
        nxy = y; // not ok
        ~~~
!!! error TS2322: Type '{ y: any; }' is not assignable to type 'not { x: any; y: any; }'.
        nxy = xy; // not ok
        ~~~
!!! error TS2322: Type '{ x: any; y: any; }' is not assignable to type 'not { x: any; y: any; }'.
        nxy = nx; // ok
        nxy = ny; // ok
        nxy = neither; // ok
        nxy = notBoth; // ok
    
        neither = x; // not ok
        ~~~~~~~
!!! error TS2322: Type '{ x: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:   Type '{ x: any; }' is not assignable to type 'not { x: any; }'.
        neither = y; // not ok
        ~~~~~~~
!!! error TS2322: Type '{ y: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:   Type '{ y: any; }' is not assignable to type 'not { x: any; }'.
        neither = xy; // not ok
        ~~~~~~~
!!! error TS2322: Type '{ x: any; y: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:   Type '{ x: any; y: any; }' is not assignable to type 'not { x: any; }'.
        neither = nx; // not ok
        ~~~~~~~
!!! error TS2322: Type 'not { x: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:     Type 'unknown' is not assignable to type 'not { x: any; }'.
!!! error TS2322:       Type 'not { x: any; }' is not assignable to type 'not { y: any; }'.
!!! error TS2322:         Property 'x' is missing in type '{ y: any; }' but required in type '{ x: any; }'.
!!! related TS2728 negatedTypes.ts:40:10: 'x' is declared here.
        neither = ny; // not ok
        ~~~~~~~
!!! error TS2322: Type 'not { y: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:     Type 'unknown' is not assignable to type 'not { x: any; }'.
!!! error TS2322:       Type 'not { y: any; }' is not assignable to type 'not { x: any; }'.
!!! error TS2322:         Property 'y' is missing in type '{ x: any; }' but required in type '{ y: any; }'.
!!! related TS2728 negatedTypes.ts:41:10: 'y' is declared here.
        neither = nxy; // not ok
        ~~~~~~~
!!! error TS2322: Type 'not { x: any; y: any; }' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:     Type 'unknown' is not assignable to type 'not { x: any; }'.
!!! error TS2322:       Type 'not { x: any; y: any; }' is not assignable to type 'not { x: any; }'.
!!! error TS2322:         Property 'y' is missing in type '{ x: any; }' but required in type '{ x: any; y: any; }'.
!!! related TS2728 negatedTypes.ts:42:19: 'y' is declared here.
        neither = notBoth; // not ok
        ~~~~~~~
!!! error TS2322: Type 'not ({ x: any; } & { y: any; })' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:   Type 'unknown' is not assignable to type 'not { x: any; } & not { y: any; }'.
!!! error TS2322:     Type 'unknown' is not assignable to type 'not { x: any; }'.
!!! error TS2322:       Type 'not ({ x: any; } & { y: any; })' is not assignable to type 'not { x: any; }'.
!!! error TS2322:         Type '{ x: any; }' is not assignable to type '{ x: any; } & { y: any; }'.
!!! error TS2322:           Property 'y' is missing in type '{ x: any; }' but required in type '{ y: any; }'.
!!! related TS2728 negatedTypes.ts:41:10: 'y' is declared here.
    
        notBoth = x; // not ok
        ~~~~~~~
!!! error TS2322: Type '{ x: any; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.
        notBoth = y; // not ok
        ~~~~~~~
!!! error TS2322: Type '{ y: any; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.
        notBoth = xy; // not ok
        ~~~~~~~
!!! error TS2322: Type '{ x: any; y: any; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.
        notBoth = nx; // ok
        notBoth = ny; // ok
        notBoth = neither; // ok
    }